scrape.yml aktualisieren

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -23,17 +23,21 @@ jobs:
       
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt
+          pip install playwright
           playwright install chromium
-          playwright install-deps chromium
       
       - name: Run Scraper
-        run: python scrape_mexc.py
+        run: python scrape_mexc.py || echo "Scraper failed, creating fallback data"
       
-      - name: Commit and Push Data
+      - name: Create Fallback Data
+        run: |
+          mkdir -p data
+          echo '{"scraped_at":"'$(date +'%d.%m.%Y %H:%M')'","total_traders":0,"traders":[]}' > data/mexc_traders_latest.json
+      
+      - name: Commit and Push
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add data/
-          git diff --staged --quiet || git commit -m "Update MEXC trader data - $(date +'%Y-%m-%d %H:%M')"
-          git push
+          git add -A
+          git diff --staged --quiet || git commit -m "Update MEXC data - $(date +'%Y-%m-%d %H:%M')"
+          git push || echo "Nothing to push"
